--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 REACT_APP_API_URL='https://santeh-ru.na4u.ru/'
 REACT_APP_URL='https://santeh-ru.na4u.ru/'
+#REACT_APP_API_URL='http://localhost:5000/'
+#REACT_APP_URL='http://localhost:5000/'
